fix: overalapping dash over h2s on mobile

--- a/revista-styles.css
+++ b/revista-styles.css
@@ -1873,10 +1873,6 @@ a[data-featherlight="image"] img:hover {
        margin-bottom: 30px;
    }
 
-    .main-section-header h2:after {
-        margin: -20px 0 0 0;
-    }
-
     .topics-categories .et_pb_code_inner a {
         width: 48%;
     }
